--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-  <nav id="nav">
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+    <header>
+      <nav id="nav">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+
+    </main>
   <section id='about'>
     <h2>
     About</h2>
@@ -34,5 +39,6 @@
 <div class="jump-to-top">
   <a href="#nav">Back to top</a>
 </div>
+<footer>&copy Akram</footer>
   </body>
 </html>
