added banner image and favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Mohammed Akram Portfolio Page</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/HatchfulExport-All/favicon.png"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   </head>
   <body>
+
     <header>
+      <section id='banner'>
+        <img src="./assets/HatchfulExport-All/linkedin_banner_image_2.png" alt="linkedin_banner_image_2">
+      </section>
       <nav id="nav">
         <ul>
           <li><a href="#about">About</a></li>
@@ -23,7 +28,7 @@
   <section id='about'>
     <h2>
     About</h2>
-    <p>Gave 15 years to the construction, civil engineering and local authority combined, being a technician for the highways and engineering. 
+    <p>Gave 15 years to the construction, civil engineering and local authority combined, being a technician for the highways and engineering.
 On a one year professional career break, my awareness of the digital world increased and led to the discovery of how far the industry has evolved. I wanted to break into this field to become a full stack developer. I found General Assembly to be the most suitable place for me to develop my skill set.
 I love the idea of working in a agile environment, with a good team. I would like to work with people to jointly host brainstorming and trying to keep it useful and fun. I really enjoy the professionalism and depth of this industry.
 </p>
