--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <header>
-      <section id='banner'>
+      <section id="banner">
         <img src="./assets/HatchfulExport-All/linkedin_banner_image_2.png" alt="linkedin_banner_image_2">
       </section>
       <nav id="nav">
