updaated layout and added projects content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mohammed Akram Portfolio Page</title>
+
     <link rel="shortcut icon" type="image/png" href="/assets/HatchfulExport-All/favicon.png"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -10,9 +11,6 @@
   <body>
 
     <header>
-      <section id="banner">
-        <img src="./assets/HatchfulExport-All/linkedin_banner_image_2.png" alt="linkedin_banner_image_2">
-      </section>
       <nav id="nav">
         <ul>
           <li><a href="#about">About</a></li>
@@ -21,6 +19,12 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <div class="hero-section">
+    <div class="hero-section-text">
+      <!-- <h1>Header</h1> -->
+      <!-- <h5>subtitle about anything you like</h5> -->
+    </div>
+  </div>
     </header>
     <main>
 
@@ -37,11 +41,17 @@ I love the idea of working in a agile environment, with a good team. I would lik
     <h2>These are my projects</h2>
     <h3>Project 1 - JaveScript Game</h3>
     <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun html colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
-    <h3>Project 2</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun html colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
-    <h3>Project 3</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p><button onclick="window.location.href='http://bit.ly/HTML-ColourGame'">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI-project-one"> view on Github <i class="fab fa-github"></i> </button></p>
+    <h3>Project 2 - Movie Wisdom</h3>
+    <p>A fan site to collect quirky one-line wisdom quotes from movies</p>
+    <p><button href="https://movie-wisdom.herokuapp.com">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI-project-two"> view on Github <i class="fab fa-github"></i> </button></p>
+    <h3>Project 3 - Sinatra fans</h3>
+    <p>A fan site for traditional jazz lovers to celebrate Frank Sinatra and share musical tracks. This is a secure web application which allows logged in users to create fan albums and add soundcloud tracks for all to listen</p>
+    <p><button href="https://sinatra-fans.herokuapp.com/">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI-project-three-sinatrafans"> view on Github <i class="fab fa-github"></i> </button></p>
+    <h3>Project 4 - Bottle-it</h3>
+    <!-- <img src="https://i.imgur.com/ilGKzRq.png" alt="landing page image for bottle it"> -->
+    <p> Ever wondered why in social circles there is such a lack in diversity of soft drinks on offer especially at drinking establishments but sometimes one stumbles across a rare find which is on offer. From this the idea of bottle-it was born to collect and celebrate hipster soft drink finds.</p>
+    <p><button href="http://bit.ly/bottle-it">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI35-Project-Four"> view on Github <i class="fab fa-github"></i> </button></p>
   </section>
   <section id='skills'>
     <h2>These are my skills</h2>
@@ -55,8 +65,12 @@ I love the idea of working in a agile environment, with a good team. I would lik
     <small>Prefered :  <a href="mailto:nasiratt92@gmail.com"><i class="fas fa-envelope-square"></i></a> </small>
   </section>
 <div class="jump-to-top">
-  <a href="#nav">Back to top</a>
+  <a href="#">Back to top</a>
 </div>
-<footer>&copy Akram</footer>
+<footer>&copy M Akram
+  <script type="text/javascript">
+document.write(new Date().getFullYear());
+</script>
+ </footer>
   </body>
 </html>
