fixed buttons and added skills content

--- a/index.html
+++ b/index.html
@@ -30,34 +30,73 @@
 
     </main>
   <section id='about'>
-    <h2>
-    About</h2>
-    <p>Gave 15 years to the construction, civil engineering and local authority combined, being a technician for the highways and engineering.
-On a one year professional career break, my awareness of the digital world increased and led to the discovery of how far the industry has evolved. I wanted to break into this field to become a full stack developer. I found General Assembly to be the most suitable place for me to develop my skill set.
-I love the idea of working in a agile environment, with a good team. I would like to work with people to jointly host brainstorming and trying to keep it useful and fun. I really enjoy the professionalism and depth of this industry.
-</p>
+    <h2>About</h2>
+    <p>After leaving school I gave 15 years to the construction, civil engineering and local authority combined, being a technician for the highways and engineering.
+      On a one year professional career break, my awareness of the digital world increased and led to the discovery of how far the industry has evolved.</p>
+      <p>I wanted to break into this field to become a full stack developer. I found General Assembly to be the most suitable place for me to develop my skill set.</p>
+      <p>On 14th September 2018 I completed the 12 weeks <a href="https://generalassemb.ly/education/web-development-immersive/london?o143=1"target="_blank">Web Development Immersive<a/> programe.</p>
   </section>
   <section id='projects'>
     <h2>These are my projects</h2>
     <h3>Project 1 - JaveScript Game</h3>
     <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun html colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
-    <p><button onclick="window.location.href='http://bit.ly/HTML-ColourGame'">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI-project-one"> view on Github <i class="fab fa-github"></i> </button></p>
+    <p><button onclick="window.open('http://bit.ly/HTML-ColourGame','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-one','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
     <h3>Project 2 - Movie Wisdom</h3>
     <p>A fan site to collect quirky one-line wisdom quotes from movies</p>
-    <p><button href="https://movie-wisdom.herokuapp.com">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI-project-two"> view on Github <i class="fab fa-github"></i> </button></p>
+    <p><button onclick="window.open('https://movie-wisdom.herokuapp.com','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-two','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
     <h3>Project 3 - Sinatra fans</h3>
     <p>A fan site for traditional jazz lovers to celebrate Frank Sinatra and share musical tracks. This is a secure web application which allows logged in users to create fan albums and add soundcloud tracks for all to listen</p>
-    <p><button href="https://sinatra-fans.herokuapp.com/">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI-project-three-sinatrafans"> view on Github <i class="fab fa-github"></i> </button></p>
+    <p><button onclick="window.open('https://sinatra-fans.herokuapp.com/','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-three-sinatrafans','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
     <h3>Project 4 - Bottle-it</h3>
     <!-- <img src="https://i.imgur.com/ilGKzRq.png" alt="landing page image for bottle it"> -->
     <p> Ever wondered why in social circles there is such a lack in diversity of soft drinks on offer especially at drinking establishments but sometimes one stumbles across a rare find which is on offer. From this the idea of bottle-it was born to collect and celebrate hipster soft drink finds.</p>
-    <p><button href="http://bit.ly/bottle-it">view the app</button>  | <button href= "https://github.com/nasiratt92/WDI35-Project-Four"> view on Github <i class="fab fa-github"></i> </button></p>
+    <p><button onclick="window.open('http://bit.ly/bottle-it','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI35-Project-Four','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
   </section>
   <section id='skills'>
-    <h2>These are my skills</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>Skills</h2>
+
+
+    <ul>
+      <th>Hard Skills</th>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Angular</li>
+          <li>ReactJs</li>
+          <li>NodeJS</li>
+          <li>MongoD</li>
+          <li>Web APIs</li>
+          <li>GitHub</li>
+          <li>Express</li>
+          <li>Webpack</li>
+          <li>Regex</li>
+          <li>JQuery</li>
+          <li>Bulma</li>
+        </ul>
+
+          <ul>
+            <th>Soft Skills</th>
+            <li>Time Management</li>
+            <li>Presentation</li>
+            <li>Team-Work</li>
+            <li>Listening</li>
+            <li>Communication management</li>
+            <li>Project Management</li>
+            <li>Visual communication</li>
+          </ul>
+
   </section>
   <section id='contact'>
+    <h4>Seeking opportunities</h4>
+    <p>With strong background in working in a administrative institution in local goverment office and engineering</p>
+    <p>I love the idea of working in a agile environment, with a good team. I would like to work with people to jointly host brainstorming and trying to keep it useful and fun. I really enjoy the professionalism and depth of this industry.</p>
+    <!-- <p>I am currently looking to find a Junior Developer role. I am open to oppurtunities in:</p>
+    <ol>
+      <li> 50 miles around London - U.K. </li>
+      <li>Copenhagen and Oslo - Scandanavia </li> -->
+      <!-- <li>New Zealand - Auckland</li> -->
+    </ol>
+
     <h2>Contact Information</h2>
     <p><i class="fas fa-envelope-square"></i> : nasiratt92[at]gmail.com</p>
     <p><i class="fab fa-linkedin"></i> : www.linkedin.com/in/mohammed-nasir-akram</p>
