updated styling and added parallax scrolling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mohammed Akram Portfolio Page</title>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="/assets/HatchfulExport-All/favicon.png"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -11,14 +11,14 @@
   <body>
 
     <header>
-      <nav id="nav">
+      <!-- <nav id="nav">
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
       <div class="hero-section">
     <div class="hero-section-text">
       <!-- <h1>Header</h1> -->
@@ -26,6 +26,8 @@
     </div>
   </div>
     </header>
+    <section class="parallax-image bg1">
+    </section>
     <main>
 
     </main>
@@ -36,17 +38,22 @@
       <p>I wanted to break into this field to become a full stack developer. I found General Assembly to be the most suitable place for me to develop my skill set.</p>
       <p>On 14th September 2018 I completed the 12 weeks <a href="https://generalassemb.ly/education/web-development-immersive/london?o143=1"target="_blank">Web Development Immersive<a/> programe.</p>
   </section>
+  <!-- <section class="parallax-image bg2">
+  </section> -->
   <section id='projects'>
     <h2>These are my projects</h2>
-    <h3>Project 1 - JaveScript Game</h3>
-    <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun html colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
+    <h3>Project 1 - JavaScript Game</h3>
+    <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun HTML colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
     <p><button onclick="window.open('http://bit.ly/HTML-ColourGame','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-one','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
     <h3>Project 2 - Movie Wisdom</h3>
     <p>A fan site to collect quirky one-line wisdom quotes from movies</p>
     <p><button onclick="window.open('https://movie-wisdom.herokuapp.com','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-two','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
+<a href="https://www.vectorstock.com/royalty-free-vector/retro-splatter-music-background-vector-858738" target="_blank">Retro splatter music background at VectorStock</a>
     <h3>Project 3 - Sinatra fans</h3>
     <p>A fan site for traditional jazz lovers to celebrate Frank Sinatra and share musical tracks. This is a secure web application which allows logged in users to create fan albums and add soundcloud tracks for all to listen</p>
     <p><button onclick="window.open('https://sinatra-fans.herokuapp.com/','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-three-sinatrafans','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
+    <section class="parallax-image bg3">
+    </section>
     <h3>Project 4 - Bottle-it</h3>
     <!-- <img src="https://i.imgur.com/ilGKzRq.png" alt="landing page image for bottle it"> -->
     <p> Ever wondered why in social circles there is such a lack in diversity of soft drinks on offer especially at drinking establishments but sometimes one stumbles across a rare find which is on offer. From this the idea of bottle-it was born to collect and celebrate hipster soft drink finds.</p>
@@ -62,7 +69,7 @@
           <li>CSS</li>
           <li>JavaScript</li>
           <li>Angular</li>
-          <li>ReactJs</li>
+          <li>React.js</li>
           <li>NodeJS</li>
           <li>MongoD</li>
           <li>Web APIs</li>
@@ -70,7 +77,7 @@
           <li>Express</li>
           <li>Webpack</li>
           <li>Regex</li>
-          <li>JQuery</li>
+          <li>jQuery</li>
           <li>Bulma</li>
         </ul>
 
@@ -86,9 +93,11 @@
           </ul>
 
   </section>
+  <section class="parallax-image bg4">
+  </section>
   <section id='contact'>
     <h4>Seeking opportunities</h4>
-    <p>With strong background in working in a administrative institution in local goverment office and engineering</p>
+    <!-- <p>With strong background in working in a administrative institution in local goverment office and engineering</p> -->
     <p>I love the idea of working in a agile environment, with a good team. I would like to work with people to jointly host brainstorming and trying to keep it useful and fun. I really enjoy the professionalism and depth of this industry.</p>
     <!-- <p>I am currently looking to find a Junior Developer role. I am open to oppurtunities in:</p>
     <ol>
@@ -98,10 +107,10 @@
     </ol>
 
     <h2>Contact Information</h2>
-    <p><i class="fas fa-envelope-square"></i> : nasiratt92[at]gmail.com</p>
-    <p><i class="fab fa-linkedin"></i> : www.linkedin.com/in/mohammed-nasir-akram</p>
-    <p><i class="fab fa-github"></i> : https://github.com/nasiratt92</p>
-    <small>Prefered :  <a href="mailto:nasiratt92@gmail.com"><i class="fas fa-envelope-square"></i></a> </small>
+    <p><i class="fas fa-envelope-square"></i> : <a style="text-decoration: none" href="mailto:nasiratt92@gmail.com"> nasiratt92[at]gmail.com</a></p>
+    <p><i class="fab fa-linkedin"></i> : <a style="text-decoration: none" target="_blank" href="https://www.linkedin.com/in/mohammed-nasir-akram">www.linkedin.com/in/mohammed-nasir-akram</a></p>
+    <p><i class="fab fa-github"></i> : <a style="text-decoration: none" target="_blank" href="https://github.com/nasiratt92">https://github.com/nasiratt92</a></p>
+    <!-- <small>Prefered :  <a href="mailto:nasiratt92@gmail.com"><i class="fas fa-envelope-square"></i></a> </small> -->
   </section>
 <div class="jump-to-top">
   <a href="#">Back to top</a>
