updated styling and content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Mohammed Akram Portfolio Page</title>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" type="image/png" href="/assets/HatchfulExport-All/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./assets/HatchfulExport-All/favicon.png"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto" rel="stylesheet">
   </head>
   <body>
 
@@ -27,44 +27,29 @@
   </div>
     </header>
     <section class="parallax-image bg1">
+
     </section>
     <main>
 
     </main>
   <section id='about'>
-    <h2>About</h2>
+    <br>
+    <h2>About me</h2>
+    <hr>
     <p>After leaving school I gave 15 years to the construction, civil engineering and local authority combined, being a technician for the highways and engineering.
       On a one year professional career break, my awareness of the digital world increased and led to the discovery of how far the industry has evolved.</p>
       <p>I wanted to break into this field to become a full stack developer. I found General Assembly to be the most suitable place for me to develop my skill set.</p>
       <p>On 14th September 2018 I completed the 12 weeks <a href="https://generalassemb.ly/education/web-development-immersive/london?o143=1"target="_blank">Web Development Immersive<a/> programe.</p>
   </section>
-  <!-- <section class="parallax-image bg2">
-  </section> -->
-  <section id='projects'>
-    <h2>These are my projects</h2>
-    <h3>Project 1 - JavaScript Game</h3>
-    <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun HTML colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
-    <p><button onclick="window.open('http://bit.ly/HTML-ColourGame','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-one','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
-    <h3>Project 2 - Movie Wisdom</h3>
-    <p>A fan site to collect quirky one-line wisdom quotes from movies</p>
-    <p><button onclick="window.open('https://movie-wisdom.herokuapp.com','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-two','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
-<a href="https://www.vectorstock.com/royalty-free-vector/retro-splatter-music-background-vector-858738" target="_blank">Retro splatter music background at VectorStock</a>
-    <h3>Project 3 - Sinatra fans</h3>
-    <p>A fan site for traditional jazz lovers to celebrate Frank Sinatra and share musical tracks. This is a secure web application which allows logged in users to create fan albums and add soundcloud tracks for all to listen</p>
-    <p><button onclick="window.open('https://sinatra-fans.herokuapp.com/','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI-project-three-sinatrafans','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
-    <section class="parallax-image bg3">
-    </section>
-    <h3>Project 4 - Bottle-it</h3>
-    <!-- <img src="https://i.imgur.com/ilGKzRq.png" alt="landing page image for bottle it"> -->
-    <p> Ever wondered why in social circles there is such a lack in diversity of soft drinks on offer especially at drinking establishments but sometimes one stumbles across a rare find which is on offer. From this the idea of bottle-it was born to collect and celebrate hipster soft drink finds.</p>
-    <p><button onclick="window.open('http://bit.ly/bottle-it','_blank')">view the app</button>  | <button onclick="window.open('https://github.com/nasiratt92/WDI35-Project-Four','_blank')"> view on Github <i class="fab fa-github"></i> </button></p>
-  </section>
   <section id='skills'>
+    <br>
     <h2>Skills</h2>
-
-
+    <hr>
+    <section id="projects"><a>
+      <div class="gallery">
+    <figure>
     <ul>
-      <th>Hard Skills</th>
+      <h2>Hard Skills</h2>
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
@@ -80,9 +65,10 @@
           <li>jQuery</li>
           <li>Bulma</li>
         </ul>
-
+</figure>
+  <figure>
           <ul>
-            <th>Soft Skills</th>
+            <h2>Soft Skills</h2>
             <li>Time Management</li>
             <li>Presentation</li>
             <li>Team-Work</li>
@@ -91,12 +77,112 @@
             <li>Project Management</li>
             <li>Visual communication</li>
           </ul>
+        </figure>
+  <figure>
+          <ul>
+            <h2>Methodologies</h2>
+            <li>RESTful</li>
+            <li>Responsive web design</li>
+            <li>TDD</li>
+            <li>MVC Framework</li>
+            <li>Agile</li>
+            <li>Trello</li>
+            <li>CRUD methods</li>
+          </ul>
+        </figure>
+  <figure>
+          <ul>
+            <h2>Other skills</h2>
+            <li>Auto CAD</li>
+            <li>Adobe professional</li>
+          </ul>
+        </figure>
 
+
+
+</div>
+<hr>
+<h2> </h2>
+<br>
   </section>
+  <!-- <section class="parallax-image bg2">
+  </section> -->
+  <section class="parallax-image bg3">
+  </section>
+  <section id='projects'>
+
+      <section id="projects"><a>
+        <br>
+        <h2>Projects</h2>
+        <hr>
+        <div class="gallery">
+     <figure>
+       <a target="_blank" href="https://github.com/nasiratt92/WDI-project-one"><i class="fab fa-github"></i></a>
+       <a target="_blank" href="http://bit.ly/HTML-ColourGame"><i class="fas fa-link"></i></a>
+       <hr>
+       <h2>JavaScript Game</h2>
+       <img src="https://i.imgur.com/mS9zxlE.png">
+       <p>The idea of the game was to create a memorisation game that is fun, teaching coders fun HTML colour names (e.g. Goldenrod or Gainsboro), which they can use as placeholder to inject some fun into day-to-day coding (e.g. using Crimson instead of Red).</p>
+
+       <h2> </h2>
+       <!-- <a target="_blank" href="https://github.com/nasiratt92/WDI-project-one"><i class="fab fa-github"></i></a>
+       <a target="_blank" href="http://bit.ly/HTML-ColourGame"><i class="fas fa-link"></i></a> -->
+     </figure>
+     <figure>
+       <a target="_blank" href="https://github.com/nasiratt92/WDI-project-two"><i class="fab fa-github"></i></a>
+       <a target="_blank" href="http://bit.ly/movie-wisdom"><i class="fas fa-link"></i></a>
+       <hr>
+       <h2>Movie Wisdom</h2>
+       <img src="https://nasircode92.files.wordpress.com/2018/06/screen-shot-2018-08-29-at-13-13-47.png">
+       <p>A fan site to collect quirky one-line wisdom quotes from movies. The idea is that well scripted movie quotes are a powerful tool and can have lasting impact.</p>
+       <h2> </h2>
+
+     </figure>
+
+     <figure>
+       <a target="_blank" href="https://github.com/nasiratt92/WDI-project-three-sinatrafans"><i class="fab fa-github"></i></a>
+       <a target="_blank" href="http://bit.ly/sinatra-fans"><i class="fas fa-link"></i></a>
+       <hr>
+       <h2>Sinatra fans</h2>
+       <img src="https://i.imgur.com/BcUodeA.png">
+       <p>A fan site for traditional jazz lovers to celebrate Frank Sinatra and share musical tracks. This is a secure web application which allows logged in users to create fan albums and add soundcloud tracks for all to listen</p>
+       <h2> </h2>
+
+     </figure>
+     <figure>
+       <a target="_blank" href="https://github.com/nasiratt92/WDI35-Project-Four"><i class="fab fa-github"></i></a>
+       <a target="_blank" href="http://bit.ly/bottle-it"><i class="fas fa-link"></i></a>
+       <hr>
+       <h2> Bottle-it</h2>
+       <img src="assets/logo.png">
+       <p> Ever wondered why in social circles there is such a lack in diversity of soft drinks on offer especially at drinking establishments but sometimes one stumbles across a rare find which is on offer. From this the idea of bottle-it was born to collect and celebrate hipster soft drink finds.</p>
+       <h2> </h2>
+
+     </figure>
+   </div>
+
+  <br>
+   <p>Throughout my 420 hours of tuition at General Assembly, I most enjoyed the most working on the Frank Sinatra fans project:</p>
+   <ul>
+     <li>Developing a meaningful brand.</li>
+     <li>Creating user stories and consulting UX designer's for feedback</li>
+     <li>Time bound - 6 days sprint making to complete the web app, making good use of common industry practices (e.g. Trello and Scrum) to execute.</li>
+   </ul>
+   <p>I created a web application model similar to Youtube's content consumption model (i.e. non-logged in users can enjoy music covers and see tribute concerts listings).</p>
+   <hr>
+   <h2> </h2>
+   <br>
+        </section>
+
+
+    </section>
   <section class="parallax-image bg4">
   </section>
+
   <section id='contact'>
-    <h4>Seeking opportunities</h4>
+    <br>
+    <h2>Seeking opportunities</h2>
+    <hr>
     <!-- <p>With strong background in working in a administrative institution in local goverment office and engineering</p> -->
     <p>I love the idea of working in a agile environment, with a good team. I would like to work with people to jointly host brainstorming and trying to keep it useful and fun. I really enjoy the professionalism and depth of this industry.</p>
     <!-- <p>I am currently looking to find a Junior Developer role. I am open to oppurtunities in:</p>
@@ -106,15 +192,15 @@
       <!-- <li>New Zealand - Auckland</li> -->
     </ol>
 
-    <h2>Contact Information</h2>
+    <h2>Contact </h2>
     <p><i class="fas fa-envelope-square"></i> : <a style="text-decoration: none" href="mailto:nasiratt92@gmail.com"> nasiratt92[at]gmail.com</a></p>
     <p><i class="fab fa-linkedin"></i> : <a style="text-decoration: none" target="_blank" href="https://www.linkedin.com/in/mohammed-nasir-akram">www.linkedin.com/in/mohammed-nasir-akram</a></p>
     <p><i class="fab fa-github"></i> : <a style="text-decoration: none" target="_blank" href="https://github.com/nasiratt92">https://github.com/nasiratt92</a></p>
     <!-- <small>Prefered :  <a href="mailto:nasiratt92@gmail.com"><i class="fas fa-envelope-square"></i></a> </small> -->
   </section>
-<div class="jump-to-top">
+<!-- <div class="jump-to-top">
   <a href="#">Back to top</a>
-</div>
+</div> -->
 <footer>&copy M Akram
   <script type="text/javascript">
 document.write(new Date().getFullYear());
